manifests/argo/netpol-eventbus.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: eventbus
  namespace: argo
spec:
  endpointSelector:
    matchLabels:
      eventbus-name: default
  ingress:
    - fromEndpoints:
        - matchLabels:
            eventsource-name: github-webhook
        - matchLabels:
            eventsource-name: alertmanager-webhook
        - matchLabels:
            sensor-name: upgrade-k8s
        - matchLabels:
            sensor-name: pxe-sync
        - matchLabels:
            sensor-name: talos-build
        - matchLabels:
            sensor-name: images-build
        - matchLabels:
            sensor-name: single-repo-build
        - matchLabels:
            sensor-name: alert-investigate
        - matchLabels:
            eventsource-name: task-dispatch
        - matchLabels:
            sensor-name: task-dispatch
        - matchLabels:
            eventsource-name: task-status-sync
        - matchLabels:
            sensor-name: task-status-sync
        - matchLabels:
            eventsource-name: argocd-deployed
        - matchLabels:
            sensor-name: talos-extension-bump
        - matchLabels:
            sensor-name: renovate-webhook
        - matchLabels:
            sensor-name: aqua-checksum
        - matchLabels:
            sensor-name: pr-review-dispatch
      toPorts:
        - ports:
            - port: "4222"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            eventbus-name: default
      toPorts:
        - ports:
            - port: "6222"
              protocol: TCP
            - port: "7777"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: argo-events-controller-manager
      toPorts:
        - ports:
            - port: "8222"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            eventbus-name: default
      toPorts:
        - ports:
            - port: "6222"
              protocol: TCP
            - port: "7777"
              protocol: TCP
